[project]
name = "traccc-benchmark-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "black>=25.11.0",
    "gitpython>=3.1.44",
    "pandas>=2.2.3",
    "pygithub>=2.6.1",
    "scipy>=1.16.3",
    "traccc-bench-tools",
]

[tool.uv.sources]
traccc-bench-tools = { path = "../benchtraccc/traccc/extras/benchmark", editable = true }
